Sun Nov 13 16:22:24 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* symbol.c (NeedToOutputSymbol): Fix KEEP support.
	(Symbol_OutputForAOF, Symbol_OutputForELF): Remove ValueCode support.
	* m_cpuctrl.c (Branch_RelocUpdater, branch_shared): Simplify.
	* output.c (outputElf): Fix section start address for absolute
	areas.
	* targetcpu.c (Target_NeedAtLeastArch): Avoid crash when no CPU can
	be suggested.
	* reloc.c (Reloc_QueueExprUpdate): Remove test on undefined symbols.
	* eval.c (evalBinop): Remove error on addition/subtraction of two
	different symbols. 

Sat Nov 12 00:11:50 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/decode.s: Add.
	* decode.c (decode): Don't match on too short mnemonic. Don't
	remove existing symbol when it is used as macro label.
	* help_cpu.c (ShiftL): un-inline.
	* whileif.c (WhileBlock_t::restoreData::offsetFile): Change type
	from long to off_t.
	* Makefile.am (asasm_CFLAGS): Add _LARGEFILE_SOURCE define.

Fri Nov 11 16:40:03 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/label.s: Add.
	* regression/tests_pass/while.s: Enhance test.
	* filestack.h (PObject::lastLineSize): Add comment.
	* macros.c (Macro_GetLine): lastLineSize was wrongly calculated
	when macro variable substitution was done.
	* input.c (Input_NextLineCore): Add buffer size check for predefine
	handling.

Wed Nov  2 01:58:58 CET 2011  John Tytgat  <John.Tytgat@aaug.net>
  
	* regression/tests_pass/variables.s: Enhance test.
	* variables.c (declare_var): Ignore type difference when local variable
	shares the same name as global variable. 
	* lex.c (Lex_MakeLocalLabel): Fix compiler warning.

Wed Nov  2 00:45:10 CET 2011  John Tytgat  <John.Tytgat@aaug.net>

	* regression/tests_pass/adr.s: Disable tests which are too
	far fetched.  Add a new one.
	* symbol.c (Symbol_OutputForAOF, Symbol_OutputForELF): ...
	* code.c, code.h (Code_Normalize, Code_ExpandCode,
	Code_ExpandCurrAreaSymbolAsOffset, Code_HasNonAddOperator,